--- a/task5/index.html
+++ b/task5/index.html
@@ -14,7 +14,7 @@
     <div class="sendInput">
         <input class="inputMsg" placeholder="Здесь вводится текст сообщения" type="text">
         <button class="j-btn-send btn-click">Отправить</button>
-        <button class="j-btn-send btn-click geo">Гео-локация</button>
+        <button class="btn-click geo">Гео-локация</button>
     </div>
 
     
